# sql-graph

./: .gitpod.yml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: graph.py  graph_modified.py
tests/: test_sql_graph.py  test_sql_graph_modified.py
tests/schemas/: ed.sql
